--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -3,4 +3,35 @@
     width: 50em;
     height: 20em;
     margin: 1em 1em 1em 2em;
+
+}
+
+.news__title{
+    background-color: var(--accent-color-dark);
+    color: var(--accent-color-light);
+    font-family: var(--highlights-font);
+    font-weight: 100;
+    text-transform: uppercase ;
+    padding: 0.4em 0.6em;
+
+    letter-spacing: .5em;
+}
+
+.news__text{
+    font-family: var(--body-font);
+    font-size: 20px;
+    padding: 0.5em;
+    line-height: 1.5;
+  
+}
+
+.news__button{
+    padding: .6em;
+    font-weight: 500;
+    font-size: 17px;
+    background-color: var(--accent-color-dark-shade-03);
+    font-family: var(--highlights-font) ;
+    border-style: none;
+    margin-left: 1em;
+
 }
