--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import url("./assets/css/slider.css");
 @import url("./assets/css/cards.css");
 @import url("./assets/css/hero.css");
+@import url("./assets/css/footer.css");
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Domine:wght@400;500;600;700&display=swap');
 @import url('https://fonts.cdnfonts.com/css/trade-gothic-lt-std');
