--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -14,11 +14,12 @@
     border-style: solid;
     border-color: rgb(216, 216, 216);
     border-radius: 20px;
+    transition: border .5s ease;
 }
 
 .frontpage__cards:hover{
     border: 5px outset var(--primary-color) ;
-    transition: ease ;
+
 }
 
 .frontpage__cardsImg {
@@ -74,6 +75,12 @@
     width: 200px;
     margin: auto;
     display: block;
+}
+
+.cards__button:hover{
+    background-color: var(--accent-color-dark);
+    text-decoration: underline;
+    color: var(--accent-color-light);
 }
 
 a {
