--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -23,13 +23,13 @@
 }
 
 .frontpage__cardsImg {
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     display: block;
     width:100%;
     height: 45%;
-    
-
 }
+
 
 .frontpage__cardsTitle {
     font-family: var(--highlights-font);
