--- a/assets/css/elonmusk.css
+++ b/assets/css/elonmusk.css
@@ -1,7 +1,7 @@
 .elonmusk__headerLink {
-    font-weight: 600;
-    font-size: x-large;
-    line-height: .2em;
+    font-weight: 800;
+    font-size: large;
+   
 }
 
 .elonmusk__article {
@@ -28,16 +28,17 @@
 
 .elonmusk__subheading {
     font-family: var(--highlights-font);
-    font-size: x-large;
-    padding: .7em 0;
+    font-size: large;
+    padding-top: 1em;
 
 }
 
 .elonmusk__bodyText {
     font-family: var(--body-font);
-    font-size: 20px;
-    line-height: 1.5;
-    padding: 1em 0;
+    font-size: medium;
+    line-height: 1.7;
+    padding-bottom: 1em;
+    
 }
 
 .elonmusk__articleImg {
@@ -49,7 +50,7 @@
 .elonmusk__button {
 
     font-weight: 600;
-    font-size: x-large;
+    font-size: large;
     background-color: var(--accent-color-dark-shade-03);
     font-family: var(--highlights-font);
     border-style: none;
@@ -66,7 +67,6 @@
 
 .elonmusk__button:hover {
     background-color: var(--accent-color-dark);
-    text-decoration: underline;
     cursor: pointer;
     color: var(--accent-color-light);
 
