--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -53,13 +53,13 @@
 }
 
 .primaryNav__menu {
-    padding: 1em;
     list-style: none;
     text-decoration: none;
     display: flex;
-    flex-wrap: wrap;
+   
 
     justify-content: space-between;
+    align-items: center;
     width: 100%;
 }
 
