--- a/assets/css/pandora.css
+++ b/assets/css/pandora.css
@@ -1,7 +1,6 @@
 .pandora__headerLink {
-    font-weight: 600;
-    font-size: x-large;
-    line-height: .2em;
+    font-weight: 800;
+    font-size: large;
 }
 
 .pandora__article {
@@ -26,20 +25,20 @@
 
 .pandora__subheading {
     font-family: var(--highlights-font);
-    font-size: x-large;
-    padding: .7em 0;
-
+    font-size: large;
+  padding-top: 1em;
 }
 
 .pandora__bodyText {
     font-family: var(--body-font);
-    font-size: 20px;
-    line-height: 1.5;
-    padding: 1em 0;
+    font-size: medium;
+    line-height: 1.7;
+    margin-bottom: 1em;
+    
 }
 
 .pandora__articleImg {
-    height: 75vh;
+    height: 70vh;
     margin: 2em;
     border-radius: 20px;
 }
@@ -47,7 +46,7 @@
 .pandora__button {
 
     font-weight: 600;
-    font-size: x-large;
+    font-size: large;
     background-color: var(--accent-color-dark-shade-03);
     font-family: var(--highlights-font);
     border-style: none;
@@ -56,7 +55,7 @@
     height: fit-content;
     padding: 1em;
     border-radius: 20px;
-    margin: 0 .5em;
+
 }
 
 .pandora__button:hover {
