--- a/assets/css/ryanair.css
+++ b/assets/css/ryanair.css
@@ -1,7 +1,6 @@
 .ryanair__headerLink {
-    font-weight: 600;
-    font-size: x-large;
-    line-height: .2em;
+    font-weight: 800;
+    font-size: large;
 }
 
 .ryanair__article {
@@ -29,20 +28,23 @@
     font-family: var(--title-font);
     font-weight: 100;
     
+    
 }
 
 .ryanair__subheading {
     font-family: var(--highlights-font);
     font-size: x-large;
-    padding: .7em 0;
+
+    padding-top: 1em;
+    
 
 }
 
 .ryanair__bodyText {
     font-family: var(--body-font);
-    font-size: 20px;
-    line-height: 1.5;
-    padding: 1em 0;
+    font-size: medium;
+    line-height: 1.7;
+    padding: .5em 0;
 }
 
 .ryanair__articleImg {
@@ -54,7 +56,7 @@
 .ryanair__button {
 
     font-weight: 600;
-    font-size: x-large;
+    font-size: large;
     background-color: var(--accent-color-dark-shade-03);
     font-family: var(--highlights-font);
     border-style: none;
@@ -63,46 +65,17 @@
     height: fit-content;
     padding: 1em;
     border-radius: 20px;
-    margin: 0 .5em;
+    margin: 1em 0;
 }
 
 .ryanair__button:hover {
     background-color: var(--accent-color-dark);
-    text-decoration: underline;
     cursor: pointer;
     color: var(--accent-color-light);
 
 }
 
-.ryanair__review {
-    display: flex;
-    justify-content: space-evenly;
 
-}
-
-.ryanair__reviewBox {
-    font-family: var(--body-font);
-    box-shadow: -6px 6px 16px 3px var(--primary-color);
-    text-align: center;
-    font-size: large;
-    width: 42vh;
-    height: 30vh;
-    transition: box-shadow .5s ease;
-}
-
-.ryanair__reviewBox:hover {
-    box-shadow: -6px 6px 16px 6px var(--primary-color);
-}
-
-.ryanair__reviewText {
-    padding: 2em 1em;
-    line-height: 1.5;
-}
-
-.ryanair__reviewTextAuthor {
-    font-family: var(--highlights-font);
-    padding: .5em;
-}
 
 .ryanair__media{
     margin: auto;
@@ -122,9 +95,7 @@
 .media__link{
     display: flex;
    
-   
 }
-
 .ryanair__mediaText {
     font-family: var(--body-font);
     font-size: medium;
