image links fixed + btn fixed + style continuity

--- a/assets/css/ryanair.css
+++ b/assets/css/ryanair.css
@@ -33,7 +33,7 @@
 
 .ryanair__subheading {
     font-family: var(--highlights-font);
-    font-size: x-large;
+    font-size: large;
 
     padding-top: 1em;
     
