--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -9,7 +9,7 @@
 
 .frontpage__cards {
     width: 350px;
-    height: 550px;
+    height: 660px;
 
     border-style: solid;
     border-color: rgb(216, 216, 216);
@@ -18,7 +18,7 @@
 }
 
 .frontpage__cards:hover{
-    border: 5px outset var(--primary-color) ;
+    border: 5px outset var(--primary-color);
 
 }
 
@@ -26,8 +26,9 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     display: block;
-    width:100%;
-    height: 45%;
+    width: 100%;
+    height: 347px;
+   
 }
 
 
@@ -46,7 +47,7 @@
 
 .frontpage__cardsType {
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: small;
     letter-spacing: .2em;
     margin: 0 .5em;
     text-align: right;
@@ -62,21 +63,33 @@
 .frontpage__cardsText {
     font-family: var(--body-font);
     font-size: medium;
-    padding: 0.5em;
+   padding: 0 .5em;
     line-height: 1.5;
+ 
+    
 }
 
 .cards__button{
     padding: .6em;
     font-weight: 500;
-    font-size: 17px;
+    font-size: medium;
     background-color: var(--accent-color-dark-shade-03);
     font-family: var(--highlights-font) ;
     border-style: none;
-  
     width: 200px;
-    margin: auto;
-    display: block;
+   
+    margin-top: .5em;
+
+}
+.frontpage__cardsButtonContainer{
+    display: flex;
+    align-content: center;
+    height: 130px;
+    position: relative;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    
 }
 
 .cards__button:hover{
