--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -65,7 +65,7 @@
 }
 
 .frontpage__heroContainerLast{
-    margin: 1em 0 .5em 0;
+    margin: 1em 0 0 0;
     
     width: 100%;
     display: flex;
