--- a/assets/css/kasijesper.css
+++ b/assets/css/kasijesper.css
@@ -32,8 +32,8 @@
 
 .kasijesper__bodyText {
     font-family: var(--body-font);
-    font-size: large;
-    line-height: 1.5;
+    font-size: medium;
+    line-height: 1.7;
     padding-bottom: 1.5em;
 }
 
@@ -77,7 +77,7 @@
     text-align: center;
     font-size: large;
     width: 42vh;
-    height: 25vh;
+    height: 28vh;
     transition: box-shadow .5s ease;
 }
 
