--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,10 +1,95 @@
-.frontpage__slider{
-    width: 320px;
-    height: 300px;
+.frontpage__slider {
+    width: 400px;
+    height: 320px;
     margin: 1em 1em 1em 1.5em;
-  
+
 }
 
-.frontpage__newsSliderContainer{
+.frontpage__newsSliderContainer {
     display: flex;
+}
+
+.carousel {
+    position: relative;
+    height: 600px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.carousel__image {
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+}
+
+.carousel__track-container {
+    width: 100%;
+    height: 320px;
+    position: relative;
+    overflow: hidden;
+
+}
+
+.carousel__track {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+    height: 100%;
+    transition: transform 250ms ease-in;
+}
+
+.carousel__slide {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.carousel__button {
+    position: absolute;
+    top: 30%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: 0;
+}
+
+.carousel__button--left {
+    left: -40px;
+    cursor: pointer;
+}
+
+.carousel__button--right {
+    right: -40px;
+    cursor: pointer;
+}
+
+.carousel__button img {
+    width: 12px;
+}
+
+.carousel__nav {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+
+}
+
+.carousel__indicator {
+    border: 0;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background: rgba(0, 0, 0, .3);
+    margin: 0 12px;
+    cursor: pointer;
+}
+
+.carousel__indicator.current-slide {
+    background: rgba(0, 0, 0, .75);
+
+}
+
+.is-hidden {
+    display: none;
 }
