--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -55,3 +55,40 @@
     color: var(--accent-color-light);
 
 }
+
+@media screen and (max-width: 1070px){
+    .about__img{
+        width: 50%;
+        height: auto;
+        margin: auto;
+    }
+    .about__article{
+        display: flex;
+        flex-direction: column;
+    }
+
+   
+}
+
+@media screen and (max-width: 464px){
+    .about__img{
+        height: 60vh;
+        width: 80%;
+        
+    }
+   
+
+    .about__buttonContainer{
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        
+    }
+
+    .about__button{
+       
+        margin: .8em auto;
+      
+    }
+
+}
