--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,22 +2,44 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+   
 }
+
+body {
+    overflow-x: hidden;
+   
+
+}
+
+.burgerMenuButton {
+    display: none;
+}
+
+.burgerNav,
+.menu-text {
+    display: none;
+}
+
 
 .siteHeader__containerImg {
     display: flex;
-
-
 }
-.siteheader__frontpageLink{
+
+.siteheader__frontpageLink {
     display: flex;
-    
 }
+
 .siteHeader__img {
     width: 120px;
     height: 140px;
     margin: 0.5rem 2rem 0.5rem 2rem;
+}
 
+.frontpage__titleHeaderContainer {
+    width: 86%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .siteHeader__title {
@@ -35,7 +57,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    margin-left: 40em;
+
     width: 30px;
     text-align: right;
 }
@@ -56,7 +78,7 @@
     list-style: none;
     text-decoration: none;
     display: flex;
-   
+
 
     justify-content: space-between;
     align-items: center;
@@ -64,7 +86,9 @@
 }
 
 .primaryNav__link,
-.primaryNav__link-right {
+.primaryNav__link-right,
+.burgerNav__link,
+.burgerNav__link-right {
     text-decoration: none;
     color: var(--accent-color-light);
     font-family: var(--highlights-font);
@@ -77,4 +101,143 @@
 
 .primaryNav__div {
     display: flex;
+}
+
+
+@media screen and (max-width: 1070px) {
+
+    .primaryNav {
+        display: none;
+    }
+
+    .frontpage__slider {
+        display: none;
+    }
+
+    .siteHeader__subtext {
+        padding: 0 3em;
+        justify-content: flex-end;
+    }
+
+    .burgerNav__container {
+        width: 100%;
+        height: 45px;
+        background-color: var(--primary-color);
+        display: flex;
+        align-items: center;
+    }
+
+    .burgerNav {
+        display: inline;
+        position: absolute;
+        background-color: var(--primary-color);
+        right: 0;
+
+
+        height: fit-content;
+        width: 60%;
+        transform: translateX(100%);
+        transition: transform 300ms cubic-bezier(.69, .1, 0, 1.84);
+    }
+
+    .burgerMenuButton {
+
+        position: absolute;
+        border-style: none;
+        background-color: transparent;
+        color: var(--accent-color-light);
+        display: flex;
+        flex-direction: row-reverse;
+        width: 100%;
+        padding: 1.5em;
+    }
+
+    .burgerNav--show {
+        display: block;
+        transform: translateX(0);
+    }
+
+    .burgerNav__menu {
+        padding: 1em;
+        list-style: none;
+
+    }
+
+    .burgerNav__menuItem,
+    .burgerNav__menuItem-right {
+        padding: .5em 0;
+    }
+
+    .menu-text {
+        display: inline;
+        font-family: var(--highlights-font);
+        text-transform: uppercase;
+        font-size: large;
+        margin: 0 1em;
+        letter-spacing: .2em;
+    }
+
+    .burgerNav__menuItem-right:first-of-type {
+        padding: 4em 0 0 0;
+    }
+
+}
+
+@media screen and (max-width: 464px) {
+    .siteHeader__img {
+        width: 120px;
+        height: 140px;
+        margin: 1em;
+    }
+
+    .frontpage__titleHeaderContainer {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+
+        margin: .1em;
+        text-align: right;
+    align-items: center;
+
+    }
+
+    .siteHeader__title {
+
+        padding-top: 1em;
+        font-size: 40px;
+        margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        
+    }
+
+    .siteHeader__subtext {
+        font-family: var(--body-font);
+        font-weight: 100;
+        font-size: 18px;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 1em .5em 0 0;
+
+        justify-content: flex-end;
+        align-content: space-around;
+        flex-direction: column;
+
+
+
+    }
+
+    .siteheader__frontpageLink {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .burgerNav {
+        width: 90%;
+      
+    }
 }
