--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@
 @import url("./assets/css/about.css");
 @import url("./assets/css/contact.css");
 @import url("./assets/css/thankyou.css");
-/* fonts */
+@import url("./assets/css/sr-only.css");
+/* fonts & icons */
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Domine:wght@400;500;600;700&display=swap');
 @import url('https://fonts.cdnfonts.com/css/trade-gothic-lt-std');
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"); 
 
